force-app/main/default/objects/QuoteLineItem/fields/dtmCentroDeDatos__c.field-meta.xml
<CustomField>
    <fullName>dtmCentroDeDatos__c</fullName>
    <label>Centro de Datos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRIARA MONTERREY</fullName>
            </value>
            <value>
                <fullName>TRIARA QUERETARO</fullName>
            </value>
            <value>
                <fullName>TRIARA REGIONAL GUADALAJARA</fullName>
            </value>
            <value>
                <fullName>TRIARA REGIONAL NEXTENGO</fullName>
            </value>
            <value>
                <fullName>TRIARA REGIONAL CANCUN</fullName>
            </value>
            <value>
                <fullName>Ciudad de México</fullName>
                <isActive>false</isActive>
                <label>Ciudad de México</label>
            </value>
            <value>
                <fullName>Guadalajara</fullName>
                <isActive>false</isActive>
                <label>Guadalajara</label>
            </value>
            <value>
                <fullName>Monterrey</fullName>
                <isActive>false</isActive>
                <label>Monterrey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>