force-app/main/default/objects/QuoteLineItem/fields/dtmCorreo__c.field-meta.xml
<CustomField>
    <fullName>dtmCorreo__c</fullName>
    <label>Correo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>