force-app/main/default/objects/QuoteLineItem/fields/dtmDireccionamiento__c.field-meta.xml
<CustomField>
    <fullName>dtmDireccionamiento__c</fullName>
    <label>Direccionamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 IP Publica</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>3 IPs asignacion direct</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>4 IPs por traduccion de direccionamiento</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Mas de 4 IPs esquema por servicio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>