force-app/main/default/objects/QuoteLineItem/fields/dtmModalidad__c.field-meta.xml
<CustomField>
    <fullName>dtmModalidad__c</fullName>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tradicional</fullName>
            </value>
            <value>
                <fullName>Bajo Demanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>