force-app/main/default/objects/QuoteLineItem/fields/dtmPrecioPartner__c.field-meta.xml
<CustomField>
    <fullName>dtmPrecioPartner__c</fullName>
    <description>DTT-240408-MVP1-TEL-136</description>
    <label>Precio Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>