force-app/main/default/objects/QuoteLineItem/fields/dtmsistemaContratacion__c.field-meta.xml
<CustomField>
    <fullName>dtmsistemaContratacion__c</fullName>
    <formula>TEXT( Product2.dtmSistemaContratacionActual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sistema de contratación</label>
    <type>Text</type>
</CustomField>