force-app/main/default/objects/QuoteLineItem/fields/dtmSubtotalPartnerFinal__c.field-meta.xml
<CustomField>
    <fullName>dtmSubtotalPartnerFinal__c</fullName>
    <description>DTT-240408-MVP1-TEL-136 subtotal (cantidad X precio partner)</description>
    <label>Subtotal Partner Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>